spacing fixes

--- a/src/styles/components/link.css
+++ b/src/styles/components/link.css
@@ -29,7 +29,7 @@
   margin-top: var(--spacing-8);
 }
 
-.link-logo {
+.link--logo {
   font-family: "Hurricane", cursive;
   font-size: var(--font-size-2xl);
 }
