--- a/src/styles/layout/footer.css
+++ b/src/styles/layout/footer.css
@@ -2,4 +2,5 @@
     display: flex;
     align-content: center;
     justify-content: center;
+    height: 5rem;
 }
